<?xml version="1.0"?>
<package format="3">
  <name>callback</name>
  <version>1.0.0</version>
  <description>
    c++ project with ros
  </description>
  <maintainer email="xxx@xxx.com">
  </maintainer>
  <license>Apache 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>

